#    modified:   public/index.html #    new file:   src/components/common/Toast.jsx #    new file:   src/components/staff/WalkInModal.jsx #    modified:   src/pages/StaffPage/PaymentHistory.jsx #    modified:   src/pages/StaffPage/StaffAppointments.css #    modified:   src/pages/StaffPage/StaffAppointments.jsx #    new file:   src/services/staffService.js # # Changes not staged for commit: #    modified:   public/index.html #    modified:   src/components/PatientAppointmentList.css #    modified:   src/components/PatientAppointmentList.jsx #    modified:   src/components/PatientInfoModal.jsx #    modified:   src/components/ProfileEditModal.jsx #    modified:   src/components/layout/Header.jsx #    modified:   src/components/sections/AppointmentSection.jsx #    modified:   src/components/sections/ContactSection.jsx #    modified:   src/components/staff/WalkInModal.jsx #    modified:   src/context/authContext.jsx #    modified:   src/pages/StaffPage/PaymentModal.css #    modified:   src/pages/StaffPage/PaymentModal.jsx #    modified:   src/pages/StaffPage/StaffContacts.jsx #    modified:   src/pages/StaffPage/StaffInvoices.jsx #    modified:   src/pages/StaffPage/StaffLayout.jsx #    modified:   src/pages/patient/PaymentStatusPage.jsx #    modified:   src/pages/patient/ProfilePage.css #    modified:   src/pages/patient/ProfilePage.jsx #    modified:   src/pages/patient/ReschedulePage.jsx #    modified:   src/services/staffService.js # # Untracked files: #    src/components/staff/WalkInModal.css #    src/pages/StaffPage/StaffContacts.css #    src/pages/StaffPage/StaffInvoices.css #    src/pages/patient/PaymentStatusPage.css

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>MediLab - Dental Clinic Management</title>
-    <meta name="description" content="Professional dental clinic management system" />
-    <meta name="keywords" content="dental, clinic, management, appointment" />
+    <title>Beauty Clinic</title>
+    <meta name="description" content="Professional beauty clinic management system" />
+    <meta name="keywords" content="beauty, clinic, management, appointment" />
 
     <!-- Favicons -->
     <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
@@ -39,6 +39,7 @@
   <body class="index-page">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal-root"></div>
 
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
